let forgot password email search be case insensitive

--- a/app/views/notifier/process_email_message.html.erb
+++ b/app/views/notifier/process_email_message.html.erb
@@ -29,13 +29,11 @@
     background-color:#ce0100;
     background:-webkit-gradient( linear, left top,  left bottom, color-stop(0.05, #ce0100), color-stop(1, #fe1a00) );
     backgroundground:-moz-linear-gradient( center top, #ce0100 5%, #fe1a00 100% );
-    /*fe1a00ilter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ce0100', endColorstr='#fe1a00');*/
   }
   .greenButton:hover {
     background-color: #33AA00;
     background:-webkit-gradient( linear, left top,  left bottom, color-stop(0.05, #33AA00), color-stop(1, #337700) );
     backgroundground:-moz-linear-gradient( center top, #33AA00 5%, #337700 100% );
-    /*fe1a00ilter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#33AA00', endColorstr='#337700');*/
   }
   .myButton:active {
     position:relative;
@@ -63,3 +61,5 @@ have read this message. Learn more at the
 Please RSVP!  Learn more at the
 <a href='http://wiki.bamru.net/index.php/RSVPs'>BAMRU Wiki</a>
 <% end %>
+<p></p>
+<img src="http://bamru.info/assets/axe.gif"/>
