--- a/app/views/home/mobile.html.erb
+++ b/app/views/home/mobile.html.erb
@@ -28,8 +28,8 @@ Let Andy know if you spot problems or have ideas for improvement.
     </td>
     <td valign=top>
       <b>Prototype 3</b> (HTML5)<br/>
-      Minimal style, fast performance.<br/>
-      Our final prototype?<br/>
+      Good performance, online and off.<br/>
+      Minimal styling.<br/>
       Status: Work in Progress<br/>
       <%= image_tag("mobile3.png") %><br/>
       <%= link_to mobile3_url, mobile3_path %>
