--- a/app/assets/stylesheets/mobile3.css.scss
+++ b/app/assets/stylesheets/mobile3.css.scss
@@ -65,3 +65,30 @@ body {
 
 .nav:visted {
   color: black; }
+
+.page {
+  text-align: left;
+  margin-top: 20px;
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
+.page > li {
+  list-style-type: none;
+}
+
+.data {
+  padding: 10px;
+}
+
+.sms {
+  float: right;
+}
+
+.divider {
+  padding: 10px;
+  margin-top: 20px;
+  display: block;
+  background: blue;
+  color: white;
+}
