--- a/app/views/mobile3/index.html.erb
+++ b/app/views/mobile3/index.html.erb
@@ -61,7 +61,9 @@
 </div>
 
 <div id='send' class='page'>
-  SEND PAGE
+  <div style='text-align: center; padding:  20px;'>
+    Under Construction
+  </div>
 </div>
 
 <div id='messages' class='page'>
