--- a/app/assets/stylesheets/mobile3.css.scss
+++ b/app/assets/stylesheets/mobile3.css.scss
@@ -1,23 +1,50 @@
+body, ul, li {
+  padding: 0;
+  margin:  0;
+  border:  0;
+}
+
 body {
   text-align: center;
   background: lightblue;
   font-family: arial, sans-serif;
-  padding: 0;
-  margin: 0; }
+}
+
+header {
+  /*position: absolute;*/
+  z-index: 2;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 55px;
+  background: black;
+}
 
 #title {
-  margin-bottom: 10px;
-  background: black;
-  padding: 20px; }
-
-.header {
   width: 100%;
   display: -webkit-box;
   -webkit-box-orient: horizontal;
   display: -moz-box;
   -moz-box-orient: horizontal;
   display: box;
-  box-orient: horizontal; }
+  box-orient: horizontal;
+  padding-top: 18px;
+  padding-bottom: 15px;
+}
+
+#wrapper {
+  /*position: absolute;*/
+  /*z-index: 1;*/
+  /*top: 60px;*/
+  /*bottom: 0;*/
+  /*left: 0;*/
+  /*width: 100%;*/
+  /*overflow: auto;*/
+}
+
+.content {
+  z-index: 1;
+}
 
 .bookend {
   text-align: left;
@@ -47,7 +74,9 @@ body {
 .nav {
   text-align: left;
   display: block;
-  margin: 10px;
+  margin: 0;
+  margin-top: 10px;
+  margin-bottom: 10px;
   padding: 20px;
   text-decoration: none;
   border: 1px solid black;
@@ -68,9 +97,10 @@ body {
 
 .page {
   text-align: left;
+  margin: 0;
   margin-top: 10px;
-  margin-left: 5px;
-  margin-right: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .page > li {
