--- a/app/assets/stylesheets/mobile3.css.scss
+++ b/app/assets/stylesheets/mobile3.css.scss
@@ -6,7 +6,7 @@ body, ul, li {
 
 body {
   text-align: center;
-  background: lightblue;
+  background: #b0acac;
   font-family: arial, sans-serif;
 }
 
@@ -17,7 +17,7 @@ header {
   left: 0;
   width: 100%;
   height: 55px;
-  background: black;
+  background: #ff0000;
 }
 
 #title {
@@ -51,6 +51,8 @@ header {
   width: 60px; }
 
 #label {
+  text-color: black;
+  font-size: 14pt;
   -webkit-box-flex: 1;
   -moz-box-flex: 1;
   box-flex: 1; }
@@ -61,15 +63,13 @@ header {
 .back {
   text-decoration: none;
   color: black;
+  border: 1px solid black;
   background: white;
   margin: 10px;
   padding: 10px;
   border-radius: 10px;
   -moz-border-radius: 10px;
   -webkit-border-radius: 10px; }
-
-#label {
-  color: white; }
 
 .nav {
   text-align: left;
@@ -80,11 +80,15 @@ header {
   padding: 20px;
   text-decoration: none;
   border: 1px solid black;
-  background: lightgray;
+  background: white;
   color: black;
   border-radius: 15px;
   -moz-border-radius: 15px;
-  -webkit-border-radius: 15px; }
+  -webkit-border-radius: 15px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  }
 
 .nav:hover {
   color: black; }
@@ -101,6 +105,7 @@ header {
   margin-top: 10px;
   padding-left: 10px;
   padding-right: 10px;
+  padding-bottom: 10px;
 }
 
 .page > li {
@@ -116,10 +121,10 @@ header {
 }
 
 .divider {
-  padding: 10px;
+  padding: 5px;
   margin-top: 20px;
   display: block;
-  background: blue;
+  background: black;
   color: white;
 }
 
