removed mobile3 test page

--- a/app/views/mobile3/index.html.erb
+++ b/app/views/mobile3/index.html.erb
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<!--<html manifest="/mobile3f.manifest">-->
-<html>
+<html manifest="/mobile3f.manifest">
+<!--<html>-->
 <head>
   <title>BAMRU Mobile</title>
   <link href='<%= raw favicon_file %>' rel='shortcut icon' type='image/vnd.microsoft.icon'/>
@@ -33,9 +33,7 @@
 <div id='wrapper'>
   <div id='content'>
 
-
     <div id='home' class='page'>
-      <a class='nav' href="#test" >Test</a>
       <a class='nav' href="#members" >Members</a>
       <a class='nav' href="#members/<%=@do_id%>">DO: <%= @do_name %></a>
       <a class='nav' href="#status"  >Status Line</a>
@@ -45,15 +43,6 @@
       <div class=state>
         <span id=state></span>
       </div>
-    </div>
-
-    <div id='test' class='page'>
-      <a href="xx" class=nav>this is a link</a>
-      <div class=navbox>
-        <a class="lnav" href="ccc">lnav</a>
-        <a class="rnav" href="ddd">rnav</a>
-      </div>
-      <a href="xx" class=nav>this is a link</a>
     </div>
 
     <div id='members' class='page'>
