using faye.js from FAYE_SERVER

--- a/app/views/chats/index.html.erb
+++ b/app/views/chats/index.html.erb
@@ -1,5 +1,5 @@
 <%= stylesheet_link_tag "chat.css" %>
-<%= javascript_include_tag "faye.js" %>
+<%= javascript_include_tag "#{FAYE_SERVER}/faye.js" %>
 <%= javascript_include_tag "chats.js" %>
 
 <div id=x_container>
