started work on bchat

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -88,7 +88,8 @@
               <% if current_member.developer? %>
                 <table width=100%>
                   <tr>
-                    <td width=100% align=center><b><%= link_to "Chat",    '/chats' %></b></td>
+                    <td width=50% align=center><b><%= link_to "Chat",  '/chats'  %></b></td>
+                    <td width=50% align=center><b><%= link_to "Bchat", '/bchats' %></b></td>
                   </tr>
                 </table>
               <% end %>
