added html mail read detection

--- a/app/assets/javascripts/chats.js.coffee.erb
+++ b/app/assets/javascripts/chats.js.coffee.erb
@@ -30,3 +30,6 @@ window.clearText = ->
 $(document).ready ->
   faye = new Faye.Client("<%= FAYE_SERVER %>")
   faye.subscribe("/chats/new", (data) -> zupdateChatList(data))
+
+$(document).ready ->
+  clearText()
