added HTML read-tracking for all message types

--- a/app/views/notifier/cert_notice_email.html.erb
+++ b/app/views/notifier/cert_notice_email.html.erb
@@ -62,4 +62,4 @@ Please RSVP!  Learn more at the
 <a href='http://wiki.bamru.net/index.php/RSVPs'>BAMRU Wiki</a>
 <% end %>
 <p></p>
-<img src="http://bamru.net/icon/<%= @short_label %>.gif"/>
+<img src="<%= @platform_url %>icon/<%= @short_label %>.gif"/>
