--- a/app/views/notifier/do_shift_started_phone.text.erb
+++ b/app/views/notifier/do_shift_started_phone.text.erb
@@ -1,1 +1,1 @@
-<%= @opts['text'] %> (from <%= @opts['author_last_name']%>) <% unless @opts['prompt'].blank? %>RSVP <%= @opts['prompt'] %><% end %>
+ATTENTION: Your BAMRU DO Shift has started!
