--- a/app/assets/stylesheets/mobile3.css.scss
+++ b/app/assets/stylesheets/mobile3.css.scss
@@ -21,8 +21,10 @@ header {
   top: 0;
   left: 0;
   width: 100%;
-  height: 55px;
-  background: #ff0000;
+  height: 53px;
+  background: black;
+  border-bottom: 2px solid;
+  border-bottom-color: #ff0000;
 }
 
 #title {
@@ -56,7 +58,7 @@ header {
   width: 60px; }
 
 #label {
-  text-color: black;
+  color: white;
   font-size: 14pt;
   -webkit-box-flex: 1;
   -moz-box-flex: 1;
