--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -79,7 +79,7 @@
               <table width=100%>
                 <tr>
                   <td width=25% align=center><b><a target='_blank' href="http://health.groups.yahoo.com/group/BAMRU">Forum</a></b></td>
-                  <td width=25% align=center><b><%= link_to "Wiki",  '/home/wiki'     %></b></td>
+                  <td width=25% align=center><b><a target='_blank' href="/home/wiki">Wiki</a></b></td>
                   <td width=25% align=center><b><%= link_to "Files", '/files'         %></b></td>
                   <td width=25% align=center><b><%= link_to "Mobile",  '/home/mobile' %></b></td>
                 </tr>
