added labs page

--- a/app/views/api/bchat/index.json.erb
+++ b/app/views/api/bchat/index.json.erb
@@ -1,4 +1,4 @@
 {
-  "chats_link"   : "/api/bchat/chats.json",
-  "members_link" : "/api/bchat/members.json"
+  "chats_link"   : "/api/chat2/chats.json",
+  "members_link" : "/api/chat2/members.json"
 }
