--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -81,18 +81,9 @@
                   <td width=25% align=center><b><a target='_blank' href="http://health.groups.yahoo.com/group/BAMRU">Forum</a></b></td>
                   <td width=25% align=center><b><a target='_blank' href="/home/wiki">Wiki</a></b></td>
                   <td width=25% align=center><b><%= link_to "Files", '/files'         %></b></td>
-                  <td width=25% align=center><b><%= link_to "Mobile",  '/home/mobile' %></b></td>
+                  <td width=25% align=center><b><%= link_to "Labs",  '/home/labs' %></b></td>
                 </tr>
               </table>
-
-              <% if current_member.developer? %>
-                <table width=100%>
-                  <tr>
-                    <td width=50% align=center><b><%= link_to "Chat",  '/chats'  %></b></td>
-                    <td width=50% align=center><b><%= link_to "Bchat", '/bchats' %></b></td>
-                  </tr>
-                </table>
-              <% end %>
             </td>
           </tr>
           <tr>
