--- a/app/views/home/labs.html.erb
+++ b/app/views/home/labs.html.erb
@@ -1,17 +1,16 @@
-<h2>BAMRU Mobile ( ALPHA )</h2>
+<h2>Labs</h2>
 <p></p>
-BAMRU Mobile is designed for Android, iPhone, iPad, iPod, and BlackBerry.
-<p></p>
-You can also test on your desktop, using a new version of Chrome or Firefox.
-<p></p>
-These prototypes are for learning new software tools and techniques.  They are not feature-complete.
-<p></p>
+These prototypes are for learning new software tools and techniques.  They are not feature-complete.<br/>
 Let Andy know if you spot problems or have ideas for improvement.
+<p></p>
+<h3 width=100% style='background: grey; padding: 3px; color: white;'>Mobile</h3>
+BAMRU Mobile is designed for Android, iPhone, iPad, iPod, Kindle Fire and BlackBerry.<br/>
+You can also test on your desktop, using a new version of Chrome or Firefox.
 <p></p>
 <table width=100%>
   <tr>
     <td>
-      <b>Prototype 1</b> (HTML5)<br/>
+      <b>Mobile 1</b><br/>
       Works fine on wifi.<br/>
       Not so great when network is slow.<br/>
       Status: Finished<br/>
@@ -19,7 +18,7 @@ Let Andy know if you spot problems or have ideas for improvement.
       <%= link_to mobile1_url, mobile1_path %>
     </td>
     <td>
-      <b>Prototype 2</b> (HTML5)<br/>
+      <b>Mobile 2</b><br/>
       Works w/o network connection.<br/>
       Scrolling performance is poor.<br/>
       Status: Finished<br/>
@@ -27,7 +26,7 @@ Let Andy know if you spot problems or have ideas for improvement.
       <%= link_to mobile2_url, mobile2_path %>
     </td>
     <td valign=top>
-      <b>Prototype 3</b> (HTML5)<br/>
+      <b>Mobile 3</b><br/>
       Good performance, online and off.<br/>
       Minimal styling.<br/>
       Status: Work in Progress<br/>
@@ -36,3 +35,10 @@ Let Andy know if you spot problems or have ideas for improvement.
     </td>
   </tr>
 </table>
+
+<p></p>
+<h3 width=100% style='background: grey; padding: 3px; color: white;'>Chat</h3>
+Experiments with chat and real-time message feeds.
+<p></p>
+<b><%= link_to "Chat1", '/chat1'  %></b> - simple chat client<br/>
+<b><%= link_to "Chat2", '/chat2'  %></b> - chat client using client-side mvc
