--- a/app/views/chat1/index.html.erb
+++ b/app/views/chat1/index.html.erb
@@ -7,7 +7,7 @@
     <div id=x_header>
       <table width=100%>
         <tr>
-          <td align=center><b>BAMRU Chat</b></td>
+          <td align=center><b>Chat1</b></td>
         </tr>
       </table>
     </div>
@@ -16,11 +16,11 @@
       <div id="chat_label" style="text-align: center;"></div>
 
       <ul id="chat">
-        <%= render @chats %>
+        <%= render :partial => "chat", :collection => @chats %>
       </ul>
 
       <div id="chat_form">
-        <%= form_for Chat.new, :remote => true do |f| %>
+        <%= form_for Chat.new, :url => chat1_path, :remote => true do |f| %>
           <%= f.text_field :text, :size => 65 %>
           <%= f.submit "Send" %>
         <% end %>
